{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "7e62713d-0bb2-4991-bd3c-0370d7511a5a",
            "actions": [
                {
                    "name": "OnRotateLeft",
                    "type": "Button",
                    "id": "bd22ab29-bffc-4caf-a49e-61adb84a8758",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRotateRigth",
                    "type": "Button",
                    "id": "ebfa52c4-ffa0-4906-8a13-8c3d3f67a3aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoveForward",
                    "type": "Button",
                    "id": "cebb58a5-4d0c-4ac4-ae3c-45d86ad3f05a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoveBack",
                    "type": "Button",
                    "id": "b53f5a57-7b20-4f1e-b7db-c4998c2d30b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoveRight",
                    "type": "Button",
                    "id": "181633d3-3ed1-4f34-b88c-f36710728e42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoveLeft",
                    "type": "Button",
                    "id": "b10892bd-924a-4512-be52-1574efbfdc53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnAttack",
                    "type": "Button",
                    "id": "d94a2efa-adc2-4f86-aa6c-7949eb8e3637",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66669f7b-11d7-4fcd-bcc5-4cdead3ca256",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a49791e9-53ae-4c34-b296-9af940635f9c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRotateRigth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1772e90a-d54f-4765-8421-5fe375feed75",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccd7b45d-be4c-442a-befa-658b053c85e0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d6dd686-5b80-4577-a0a0-7e1589d8c046",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8de50f28-f1f7-444e-a480-dcc54d114d62",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9414b40-77e7-4be6-98a1-3de787b1fadc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}